Fix title alignment in mortgage input form

--- a/src/components/MortgageInfoInputRow.scss
+++ b/src/components/MortgageInfoInputRow.scss
@@ -16,6 +16,7 @@
 
     .inputField {
         flex: 1;
+        padding: 1px;
         min-width: 75px;
         text-align: center;
         margin-left: 10px;
@@ -50,6 +51,7 @@
         }
 
         .removeIcon {
+            opacity: 0;
             cursor: inherit;
         }
     }
